--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="og:image" content="Pizza, Pasta"/>
     <meta name="og:description" content=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
